<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** modified:
** Copyright 2012, pline.co.jp
**
** original:
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">Keyboard with Ctrl key</string>
    <string name="settings_name">Keyboard with Ctrl key Settings</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="behavior">Behavior</string>
    <string name="look">Look</string>
    <string name="portraitkeyheight_title">key height on portrait</string>
    <string name="landscapekeyheight_title">key height on landscape</string>
    <string name="keyheight_summary">30 .. 100 dip</string>

    <string name="title_assignkey4chars">special keys in qwerty keyboard</string>
    <string name="summary_on_assignkey4chars">Assign one key for multi chars</string>
    <string name="summary_off_assignkey4chars">Assign one key for one char</string>

    <string name="title_repeatable">on long press key</string>
    <string name="summary_on_repeatable">Repeatable</string>
    <string name="summary_off_repeatable">Not repeatable</string>

    <string name="title_bskeysendctrlquestion">Backspace key</string>
    <string name="summary_on_bskeysendctrlquestion">^?</string>
    <string name="summary_off_bskeysendctrlquestion">^H</string>

    <string name="title_delkeysendescseq">Delete key</string>
    <string name="summary_on_delkeysendescseq">^[[3~</string>
    <string name="summary_off_delkeysendescseq">^?</string>
</resources>
